2014-12-22  Chris Metcalf  <cmetcalf@ezchip.com>

	[BZ #17747]
	* math/w_j0.c [defined NO_LONG_DOUBLE] (j0, y0): Convert strong
	alias to weak alias for j0l, y0l.
	* math/w_j1.c [defined NO_LONG_DOUBLE] (j1, y1): Likewise.
	* math/w_jn.c [defined NO_LONG_DOUBLE] (jn, yn): Likewise.

	[BZ #17746]
	* sysdeps/tile/tilegx/strstr.c (STRSTR2): Remove implicit boolean
	conversion.

2014-12-22  Steve Ellcey  <sellcey@imgtec.com>

	* sysdeps/unix/mips/sysdep.h (__mips_isa_rev): Set
	to zero if not already defined.

2014-12-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17724]
	* sysdeps/ieee754/k_standard.c: Don't include <float.h>.
	(__kernel_standard_f): Remove.  Moved to k_standardf.c.
	(__kernel_standard_l): Remove.  Moved to k_standardl.c with
	(char *) casts added.
	* sysdeps/ieee754/k_standardf.c: New file.
	* sysdeps/ieee754/k_standardl.c: Likewise.
	* math/Makefile (libm-support): Remove k_standard.
	(libm-calls): Add k_standard.

2014-12-22  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/feenablxcpt.c (feenableexcept):
	Optimize to avoid an unnecessary FPCR read.

2014-12-22  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/fesetenv.c (fesetenv):
	Optimize to reduce FPCR/FPSR accesses.

2014-12-22  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/ftestexcept.c (fetestexcept):
	Call libc_fetestexcept_aarch64.

2014-12-22  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/fesetround.c (fesetround):
	Call libc_fesetround_aarch64.

2014-12-22  Joseph Myers  <joseph@codesourcery.com>

	[BZ #17733]
	* sysdeps/unix/sysv/linux/bind.S (NO_WEAK_ALIAS): Do not define.
	(__bind): Do not define as weak alias.
	* sysdeps/unix/sysv/linux/getsockname.S (NO_WEAK_ALIAS): Do not
	define.
	(__getsockname): Do not define as weak alias.

2014-12-22  Will Newton  <will.newton@linaro.org>

	* manual/install.texi: Document that we require bison 2.7
	or above.
	* INSTALL: Regenerate.
	* configure.ac: Use AC_CHECK_PROG_VER instead of