@@ -1,3 +1,7 @@
+2014-12-22  Steve Ellcey  <sellcey@imgtec.com>
+
+	* sysdeps/mips/memcpy.S: Fix preprocessor indentation.
+
 2014-12-22  Chris Metcalf  <cmetcalf@ezchip.com>
 
 	[BZ #17747]
